crates/penrose_proc/tests/derive/meta-args-reject-correctly.stderr
error: Expected #[stubbed_companion_trait] or #[stubbed_companion_trait(prefix = "Foo")]
  --> $DIR/meta-args-reject-correctly.rs:13:27
   |
13 | #[stubbed_companion_trait(bork = "CustomPrefix")]
   |                           ^^^^^^^^^^^^^^^^^^^^^
